@@ -11,6 +11,7 @@ import reactor.core.scheduler.Schedulers;
 import reactor.test.StepVerifier;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.util.List;
@@ -777,7 +778,7 @@ public class UrlBuilderTests {
 
     @Test
     public void parseURLSchemeAndHost() throws MalformedURLException {
-        final UrlBuilder builder = UrlBuilder.parse(new URL("http://www.bing.com"));
+        final UrlBuilder builder = UrlBuilder.parse(URI.create("http://www.bing.com").toURL());
         assertEquals("http://www.bing.com", builder.toString());
     }
 
@@ -802,17 +803,19 @@ public class UrlBuilderTests {
 
     @Test
     public void fluxParallelParsing() {
-        Mono<Long> mono = Flux.range(0, 20000)
+        AtomicInteger callCount = new AtomicInteger();
+        Mono<Void> mono = Flux.range(0, 20000)
             .parallel()
             .runOn(Schedulers.parallel())
-            .map(i -> UrlBuilder.parse("https://example" + i + ".com"))
-            .sequential()
-            .count();
+            .map(i -> {
+                callCount.incrementAndGet();
+                return UrlBuilder.parse("https://example" + i + ".com");
+            })
+            .then()
+            .timeout(Duration.ofSeconds(10));
 
-        StepVerifier.create(mono)
-            .assertNext(count -> assertEquals(20000, count))
-            .expectComplete()
-            .verify(Duration.ofSeconds(10));
+        StepVerifier.create(mono).verifyComplete();
+        assertEquals(20000, callCount.get());
     }
 
     @Test
